--- a/Energy.App.Standalone/src/attributionAndLicensing/NugetLicenseGeneration/NugetCreditsPartialTemplate.hbs
+++ b/Energy.App.Standalone/src/attributionAndLicensing/NugetLicenseGeneration/NugetCreditsPartialTemplate.hbs
@@ -1,5 +1,5 @@
 <div class="eme--thirdparty--nuget--root">
-    <h2>Third Party Nuget Package Attribution &amp; Licenses</h2>
+    <h2>Third Party Library Attribution &amp; Licenses</h2>
     {{#each packageInfos}}
     <div class="eme--thirdparty--nuget--package--container">
         <h3 class="eme--thirdparty--nuget--package-name">{{PackageName}}</h3>
