--- a/Energy.App.Standalone/src/views/index_template.ejs
+++ b/Energy.App.Standalone/src/views/index_template.ejs
@@ -4,19 +4,19 @@
 <head prefix="<%= ogHeadPrefix %>">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="noindex">
+    <meta name="robots" content="<%= robotsContent %>">
 
     <title>Explain My Energy</title>
 
-    <meta name="description" content="<%= ogDescription %>" />
+    <meta name="description" content="<%= description %>" />
 
     <meta name="color-scheme" content="only light" />
 
     <link href="../data/manifest.json" rel="manifest" />
 
-    <meta property='og:title' content='<%= ogTitle %>' />
+    <meta property='og:title' content='<%= title %>' />
     <meta property='og:image' content='<%= ogImage %>' />
-    <meta property='og:description' content='<%= ogDescription %>' />
+    <meta property='og:description' content='<%= description %>' />
     <meta property='og:url' content='<%= ogUrl %>' />
     <meta property='og:type' content='<%= ogType %>' />
 
