tidy, add robots config, fixed manifest

--- a/Energy.App.Standalone/src/views/index_template.ejs
+++ b/Energy.App.Standalone/src/views/index_template.ejs
@@ -12,14 +12,13 @@
 
     <meta name="color-scheme" content="only light" />
 
-    <link href="../data/manifest.json" rel="manifest" />
-
     <meta property='og:title' content='<%= title %>' />
     <meta property='og:image' content='<%= ogImage %>' />
     <meta property='og:description' content='<%= description %>' />
     <meta property='og:url' content='<%= ogUrl %>' />
     <meta property='og:type' content='<%= ogType %>' />
 
+    <link href="manifest.json" rel="manifest" />
 
 
     <base href="/" />
