Fix test, fix credits link

--- a/Energy.App.Standalone/Shared/MainLayout.razor
+++ b/Energy.App.Standalone/Shared/MainLayout.razor
@@ -42,7 +42,7 @@
 
             <div class="w-fit-content footer-nav-item">
 
-                <MudNavLink  Href="/AttributionsAndLicense">Attributions &amp; Licensing</MudNavLink>
+                <MudNavLink  Href="/Credits">Credits</MudNavLink>
             </div>
 
         </MudAppBar>
