--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeterFormComponent.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/AddElectricityMeterFormComponent.razor
@@ -20,7 +20,7 @@
                     <p>Don't know your Electricity Meter's MPAN number?</p>
                     <p>Quickly find it via the <MudButton Size="Size.Small" ButtonType="ButtonType.Button" StartIcon="@Icons.Material.Filled.Bolt" Variant="Variant.Outlined" Color="Color.Default" @onclick="ToggleNationalGrid">National Grid</MudButton></p>
                     <iframe id="iframeNationalGrid" hidden="@_hideNationalGrid"
-                            src="https://supplier.nationalgrid.co.uk/"></iframe>
+                            src="https://supplier.nationalgrid.co.uk"></iframe>
                 </div>
 
 
