--- a/Energy.App.Standalone/src/views/index_template.ejs
+++ b/Energy.App.Standalone/src/views/index_template.ejs
@@ -3,10 +3,13 @@
 
 <head prefix="<%= ogHeadPrefix %>">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="<%= robotsContent %>">
 
     <title>Explain My Energy</title>
+    
+    <link href="manifest.webmanifest" rel="manifest" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="<%= robotsContent %>">
 
     <meta name="description" content="<%= description %>" />
 
@@ -18,9 +21,6 @@
     <meta property='og:url' content='<%= ogUrl %>' />
     <meta property='og:type' content='<%= ogType %>' />
 
-    <link href="manifest.json" rel="manifest" />
-
-
     <base href="/" />
 
     <link rel="icon" href="../favicons/favicon.ico" type="image/x-icon">
@@ -30,8 +30,6 @@
 
 
     <link rel="stylesheet" href="../scss/fontawesome/app-fontawesome.scss">
-
-
 
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="Energy.App.Standalone.styles.css" rel="stylesheet" />
