--- a/Energy.App.Standalone/_Imports.razor
+++ b/Energy.App.Standalone/_Imports.razor
@@ -49,3 +49,5 @@
 @using Energy.App.Standalone.DTOs
 @using Energy.App.Standalone.DTOs.Tariffs
 @using System.Collections.Immutable
+@using Energy.App.Standalone.Services;
+@using Energy.App.Standalone.Services.FluxorPersist;
