--- a/Energy.App.Standalone/Shared/NavMenu.razor
+++ b/Energy.App.Standalone/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
 
         <MudTooltip Text="@ElectricityTooltipText()" Placement="Placement.Right" RootClass="w-Inherit">
             <MudNavLink Disabled="ElectricityDisabled"  Class="navbar-nav-item" Href="@ElectricityHref" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ElectricBolt" ActiveClass="active-navbar-item">
-                <NavMenuNavLinkContent SuffixIcon="@(HeatingMeterIsElectricity ? Icons.Material.Filled.LocalFireDepartment : "")">Electricity</NavMenuNavLinkContent>
+                <NavMenuNavLinkContent SuffixIcon="@(HeatingMeterIsElectricity ? Icons.Material.Filled.Thermostat : "")">Electricity</NavMenuNavLinkContent>
             </MudNavLink>
         </MudTooltip>
         <MudTooltip Text="@GasTooltipText()" Placement="Placement.Right" RootClass="w-Inherit">
@@ -33,7 +33,7 @@
                     Match="NavLinkMatch.Prefix"
                     Icon="@Icons.Material.Filled.LocalFireDepartment" 
                     ActiveClass="active-navbar-item">
-                <NavMenuNavLinkContent SuffixIcon="@(HeatingMeterIsGas ? Icons.Material.Filled.LocalFireDepartment : "")">Gas</NavMenuNavLinkContent>
+                <NavMenuNavLinkContent SuffixIcon="@(HeatingMeterIsGas ? Icons.Material.Filled.Thermostat : "")">Gas</NavMenuNavLinkContent>
 
             </MudNavLink>
         </MudTooltip>
