--- a/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterSetupTable.razor
+++ b/Energy.App.Standalone/Features/Setup/Meter/Pages/MeterSetupTable.razor
@@ -1,6 +1,6 @@
 ﻿@inherits FluxorComponent
 @inject IDispatcher Dispatcher
-@inject AppConfig AppConfig
+@inject AppStatus AppConfig
 
 <MudPaper Class="ma-3 " Elevation="0">
     <MudText Class="fw-bolder" Typo="Typo.h5">Meter Setup</MudText>
