--- a/Energy.App.Standalone/Features/Setup/SetupPage.razor
+++ b/Energy.App.Standalone/Features/Setup/SetupPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/Setup"
 @using Blazored.LocalStorage;
-@inject AppConfig AppConfig
+@inject AppStatus AppConfig
 @inherits FluxorComponent
 
 
