--- a/Energy.App.Standalone/Features/Setup/Household/Household.razor
+++ b/Energy.App.Standalone/Features/Setup/Household/Household.razor
@@ -1,6 +1,6 @@
 ﻿@inherits FluxorComponent
 @inject IDispatcher Dispatcher
-@inject AppConfig AppConfig
+@inject AppStatus AppConfig
 
 @if (_readyToInteract)
 {
