--- a/Energy.App.Standalone/App.razor
+++ b/Energy.App.Standalone/App.razor
@@ -1,5 +1,9 @@
-﻿@using Fluxor.Persist.Middleware;
+﻿@using Energy.App.Standalone.Features.Setup.TermsAndConditions;
+@using Fluxor.Persist.Middleware;
 @inherits FluxorComponent
+@inject ISetDefaultLocalState DefaultLocalState
+@inject IDispatcher Dispatcher
+@inject NavigationManager NavManager
 
 <Fluxor.Blazor.Web.StoreInitializer />
 
@@ -15,14 +19,69 @@
         </LayoutView>
     </NotFound>
 </Router>
+
 @code {
+
+
+    bool _demoSetup = false;
+
     protected override void OnInitialized()
     {
+        Console.WriteLine("Demo Setup: " + _demoSetup);
+
+
         SubscribeToAction<InitializePersistMiddlewareResultSuccessAction>(result =>
         {
             Console.WriteLine($"**** State rehydrated ****");
             StateHasChanged();
         });
+
+    }
+
+    
+
+    private bool _firstRender = true;
+
+    // // Overridden to provide an async method that is run before any rendering
+    public override async Task SetParametersAsync(ParameterView parameters)
+    {
+        // Apply the supplied Parameters to the Conponent
+        // Must do this first
+        parameters.SetParameterProperties(this);
+
+            // Run the Pre Render code
+        @if (_firstRender)
+        {
+            await this.PreFirstRenderAsync();
+            _firstRender = false;
+        }
+
+        // Run the base SetParametersAsync providing it with an empty ParameterView
+        // We have already applied the parameters and then may already be stale
+        // This runs the normal lifecycle methods
+        await base.SetParametersAsync(ParameterView.Empty);
+    }
+
+    public async Task PreFirstRenderAsync()
+    {
+        // Your async code goes here
+        // You can run sync code too if you wish
+        await DefaultLocalState.LoadDefaultsIfDemo();
+        _demoSetup = DefaultLocalState.IsDemoMode;
+
+        if (!_demoSetup){
+            return;
+        }
+
+        Dispatcher.Dispatch(new PreloadHouseholdStateAction(DefaultLocalState.HouseholdState));
+
+        Dispatcher.Dispatch(new PreloadMeterSetupStateAction(DefaultLocalState.MeterSetupState));
+
+        Dispatcher.Dispatch(new PreloadGasReadingsAction(DefaultLocalState.GasReadingsState));
+
+        Dispatcher.Dispatch(new PreloadElectricityReadingsAction(DefaultLocalState.ElectricityReadingsState));
+
+        Dispatcher.Dispatch(new HasSeenWelcomeScreenAction(seen: true));
     }
 
 }
